# BatzerlDBProject

./: CMakeLists.txt  README
app/: CMakeLists.txt  db.json  main.cpp
batzerlDB/: CMakeLists.txt
batzerlDB/include/: batzerlDB.hpp  batzerl_db.hpp  constants.hpp  data_storage.hpp  error_manager.hpp  hash_table.hpp  input_manager.hpp  output.hpp
batzerlDB/source/: batzerlDB.cpp  batzerl_db.cpp  data_storage.cpp  error_manager.cpp  hash_table.cpp  input_manager.cpp  output.cpp
